--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -27,8 +27,8 @@
     margin: -75px auto; // bagel-blue (no drop shadow)
     // width: 100px;
     // margin: -50px auto;
-    -webkit-filter: drop-shadow(0px 2px 4px #000);
-    filter: drop-shadow(0px 2px 4px #000);
+    // -webkit-filter: drop-shadow(0px 2px 4px #000);
+    // filter: drop-shadow(0px 2px 4px #000);
   }
 
   // .logo0 {
