--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -1,8 +1,8 @@
 $accentColor = #006DFF
-$textColor = #2c3e50
-$borderColor = #eaecef
-$codeBgColor = #282c34
-$arrowBgColor = #ccc
-$badgeTipColor = #42b983
-$badgeWarningColor = darken(#ffe564, 35%)
-$badgeErrorColor = #DA5961
+$textColor = #006dff
+$borderColor = #006dff
+$codeBgColor = #006dff
+$arrowBgColor = #006dff
+$badgeTipColor = #006dff
+$badgeWarningColor = darken(#006dff, 35%)
+$badgeErrorColor = #006dff
